cargo-features = ["default-run"]

[package]
name = "moiety"
version = "0.1.0"
authors = ["Aaron Griffith <aargri@gmail.com>"]
edition = "2018"
default-run = "vahttool"

[dependencies]
futures-preview = "0.3.0-alpha.13"
failure = "0.1"
bincode = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
memchr = "2.0"
refl = "0.2"
palette = "0.4"
lodepng = "2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vahttool"
path = "tool/main.rs"
