[package]
name = "moiety"
version = "0.1.0"
authors = ["Aaron Griffith <aargri@gmail.com>"]
edition = "2018"
default-run = "vahttool"

[features]
default = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
either = "1.6"
ico = "0.1"
palette = "0.5"
pelite = { version = "0.8", features = [] }
png = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smol = "0.3"
thiserror = "1.0"
unshield = { version = "0.2", features = ["async"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "vahttool"
path = "tool/main.rs"
