[package]
name = "moiety-web"
version = "0.1.0"
authors = ["Aaron Griffith <aargri@gmail.com>"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[dependencies]
moiety = {path = "../"}
futures-preview = {version = "0.3.0-alpha.14", features = ["compat"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"
js-sys = "0.3"
console_error_panic_hook = {version = "0.1.1", optional = true}
palette = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Document", "Element", "Node", "HtmlElement", "Headers", "Request", "RequestInit", "RequestMode", "Response", "CssStyleDeclaration", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageBitmap", "ImageData", "Blob", "OffscreenCanvas"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
